Fix invite guided tour overflows
- Remove hard height constraint on guided tour card, which caused
overflows when translated info is lenghty.
- Pass width of guided tour card through JS, instead of LESS !important rules.
- Limit the width of cancel and confirm buttons, which makes
buttons stay in one line.

Bug: T168413

--- a/modules/rcfilters-beta-tour.less
+++ b/modules/rcfilters-beta-tour.less
@@ -1,6 +1,5 @@
 .mw-guidedtour-tour-RcFiltersBeta {
 	padding: 40px;
-	width: 600px !important;
 	.guider_content {
 		background: url( images/rc-beta-tour-welcome-ltr.gif ) no-repeat;
 		// Ensure the background image appears on the left in LTR and on the right in RTL
