--- a/modules/rcfilters-highlight-tour.less
+++ b/modules/rcfilters-highlight-tour.less
@@ -1,6 +1,5 @@
 .mw-guidedtour-tour-RcFiltersHighlight {
 	padding: 40px;
-	width: 250px !important;
 	.guider_content {
 		background: url( images/highlight-tour-ltr.svg ) no-repeat;
 		background-position-x: 50%;
